test_suite5/ALAN/test_suite/alan-2022-examples/failing/002370_mutation.alan
source IdO begin get P8 then[76] end
